src/Assets/css/default.css
/*
    General
*/
#blue_text{
    color:#21c2c8;
}

#full_line{
    border-top: 2px solid #444649;
    width: 100%;    
}

#half_line{
    border-top: 2px solid #444649;
    width: 50%;
}

#standard_line{
    border-top: 2px solid #444649;
    width: 50px;
}


/*
    Landing Page
*/
html,#landingPage, #pt{
    width: 100;
    height: 100vh;
}

#pt_canvas{
    height: 100vh;
    /*pointer-events: none; currently works for mobile but disable all canvas*/
}
#landingPage{
    position: relative;
    margin-bottom: 0;
    text-align: center;
}
#landingText{
    color: white;
    position: absolute;
    z-index: 999;
    padding-top:100%;
}
#landingMyName{
    color:#e1236e !important;
    font: bold;
}

/*
    Nav Bar
*/
.navbar {
    margin-bottom: 0;
}

/*
    Homepage
*/
#homepage_banner{
    background-color: white;
}
#hompage_content{
    background-color: #e9ecef;
}
#white_background_text{
    color:#444649;
}
#homepage_icons{
    color:#21c2c8;
    font-size: 120px;
}
#homepage_icon_text{
    color: #616161;
    line-height: 75%;
}
#homepage_title_text{
    color: #616161;
    line-height: 85%;
}
#homepage_info_icon{
    color:#c2c6c6;
    font-size: 240px;
}
#homepage_skills{
    background-color: white;
}
.progress{
    height:25px;
    width:90%;
}
#progress-bar-title{
    padding-top: 7px;
    padding-left: 5px;
    text-align: left;
    width: 100%;
    color: white;
}
#progress-bar-percent{
    text-align: right;
    color: #616161;  
    position: absolute;
    right: 20px;
}

/*
    Thanks Page
*/
#thankspage_icons{
    color:#21c2c8;
    font-size: 120px;
}

/*
    Error Page
*/
#errorpage_icons{
    color: #ff0000;
    font-size: 120px;
}

/*
    Footer
*/
#footer_icon{
    color:#999c9f;
}

footer{
    background-color: #343a40;
}

.footer_name{
    color:white;
}

